# ngtemplate

./: .gitignore  .gitmodules  README  README.md  README.txt
doc/: HOWTO  QUICKSTART  TEMPLATE_README.txt  TODO
src/: CMakeLists.txt  README.txt  internal.c  internal.h  ngtembed.c  ngtembed.h  ngtembed_test.c  ngtembed_tool.c  ngtemplate.c  stdenv.c  template.c  template.h
src/include/: hashtable.h  list.h  ngtemplate.h  template.h
src/libuseful/: LICENSE.txt
src/libuseful/src/: hashtable.c  list.c  stringbuilder.c  test_utils.h
src/libuseful/src/include/: stringbuilder.h
src/testing/: ngtembed_test.c  stringbuilder_test.c  template_test.c
tests/: ngtembed.bmk  ngtembed_0.tst  ngtembed_1.tst  ngtembed_2.tst  template_0.bmk  template_0.tst  template_1.bmk  template_1.tst  template_10.bmk  template_10.tst  template_11.bmk  template_11.tst  template_12.bmk  template_12.tst  template_2.bmk  template_2.tst  template_3.bmk  template_3.tst  template_4.bmk  template_4.tst  template_5.bmk  template_5.tst  template_6.bmk  template_6.subtemplate  template_6.tst  template_7.bmk  template_7.tst  template_8.bmk  template_8.tst  template_9.bmk  template_9.tst
